2019-05-21  Florian Weimer  <fweimer@redhat.com>

	[BZ #24583]
	* wcsmbs/wcsmbsload.h (__wcsmbs_close_conv): Declare.
	* wcsmbs/wcsmbsload.c (__wcsmbs_close_conv): Define.
	* libio/iofclose.c (_IO_new_fclose): Call __wcsmbs_close_conv
	instead of __gconv_release_step.
	* libio/Makefile (tests): Add tst-wfile-gconv.
	(tests-container): Add tst-wfile-ascii.
	(tst-wfile-gconv-ENV): Enable mtrace.
	(generated): Add tst-wfile-gconv.mtrace, tst-wfile-gconv.check.
	(tests-special): Add tst-wfile-gconv-mem.out.
	(tst-wfile-gconv.out): Depend on locales.
	(tst-wfile-gconv-mem.out): Add mtrace rule.
	* libio/tst-wfile-ascii.c: New file.
	* libio/tst-wfile-gconv.c: Likewise.

2019-05-20  Florian Weimer  <fweimer@redhat.com>

	[BZ #24588]
	libio: Remove codecvt vtable.
	* libio/fileops.c ( _IO_new_file_fopen): Do not copy
	__libio_codecvt.
	* libio/iofgetpos.c (_IO_new_fgetpos): Call
	__libio_codecvt_encoding.
	* libio/iofgetpos64.c (_IO_new_fgetpos): Likewise.
	* libio/iofsetpos.c (_IO_new_fsetpos): Likewise.
	* libio/iofsetpos64.c (_IO_new_fsetpos): Likewise.
	* libio/iofwide.c (__libio_codecvt): Remove variable.
	(_IO_fwide): Do not copy __libio_codecvt.
	(__libio_codecvt_out): Rename from do_out and export.
	(do_unshift): Remove function.
	(__libio_codecvt_in): Rename from do_in and export.
	(__libio_codecvt_encoding): Rename from do_encoding and export.
	(do_always_noconv): Remove function.
	(__libio_codecvt_length): Rename from do_length and export.
	(do_max_length): Remove function.
	* libio/libio.h (enum __codecvt_result): Remove definition; moved
	to libioP.h.
	(struct _IO_codecvt): Remove fields __codecvt_destr,
	__codecvt_do_out, __codecvt_do_unshift, __codecvt_do_in,
	__codecvt_do_encoding, __codecvt_do_always_noconv,
	__codecvt_do_length, __codecvt_do_max_length.
	* libio/libioP.h (enum __codecvt_result): Define; moved from
	libio.h.
	(__libio_codecvt_out, __libio_codecvt_in)
	(__libio_codecvt_encoding, __libio_codecvt_length): Declare
	functions.